--- a/index.html
+++ b/index.html
@@ -34,12 +34,11 @@
                     function validate() {
                         var user=document.getElementById('username').value;
                         var pass=document.getElementById('password').value;
-                        if((user=="admin")&&(pass=="admin")){
-                            window.alert("Welcome to Admin Panel");
-                            window.location.href="https://underservice-sentry.netlify.app";
-                        }
+                         if((user=="admin")&&(pass=="admin")){
+                            window.location.href="https://user-sentry.netlify.app"}
+                         
                         else;
-                            window.alert("Username or Password Incorrect");
+                            window.alert("loading..");
                     }
                 </script>
     </body>
